Updated code stm

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,10 +3,10 @@ th, td {
   border-bottom: 1px solid #333;
   text-align: left;
 }
-thead {
+/* thead {
   background: #292929;
   color: #e793cc;
 }
 tr:nth-child(even) {
   background: #181818;
-}
+} */
